# goit-pythonweb-hw-12

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  seed.py  start.sh
docs/: api.rst  conf.py  conf.rst  database.rst  index.rst  main.rst  repository.rst  schemas.rst  services.rst
migrations/: env.py
migrations/versions/: 730e35c7520b_init_migration.py  a1b2c3d4e5f6_add_role_column_to_users.py  b0579b96dee3_init_db.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: create_db.py  db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html  reset_password_form.html
tests/: conftest.py  test_cache_unit.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_users.py  test_integration_utils.py  test_intrgration_contacts.py  test_user_repository_unit.py
