[project]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Terzi"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "bcrypt (>=4.0.0)",
    "fastapi-mail (>=1.6.4,<2.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
    "cloudinary (>=1.44.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "redis (>=5.2.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=9.1.0,<10.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "fakeredis (>=2.26.0,<3.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore:.*Using .httpx. with .starlette.testclient. is deprecated.*",
    "ignore:.*iscoroutinefunction. is deprecated and slated for removal.*:DeprecationWarning"
]

[tool.coverage.run]
# httpx's ASGITransport drives the app through anyio worker threads, so
# coverage must follow other threads or it under-reports async route bodies.
concurrency = ["thread", "greenlet"]
source = ["src"]
omit = ["src/services/email.py", "tests/*"]

[tool.coverage.report]
show_missing = true